-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-panama
-
Component/s: hotspot
-
aarch64
-
linux
$ jtreg -Xcomp -XX:-TieredCompilation -XX:+PrintAssembly -timeout:10 jdk/jdk/incubator/vector/Float128VectorTests.java
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciInstanceKlass.hpp:231
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/hh/repo/panama-vector/src/hotspot/share/ci/ciInstanceKlass.hpp:231), pid=129098, tid=129110
# Error: assert(_nonstatic_fields != __null) failed
#
# JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.hexuejin.panama-vector)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.hexuejin.panama-vector, compiled mode, sharing, compressed oops, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x7967b0] JVMState::format(PhaseRegAlloc*, Node const*, outputStream*) const+0xe18
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciInstanceKlass.hpp:231
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/hh/repo/panama-vector/src/hotspot/share/ci/ciInstanceKlass.hpp:231), pid=129098, tid=129110
# Error: assert(_nonstatic_fields != __null) failed
#
# JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.hexuejin.panama-vector)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.hexuejin.panama-vector, compiled mode, sharing, compressed oops, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x7967b0] JVMState::format(PhaseRegAlloc*, Node const*, outputStream*) const+0xe18
- relates to
-
JDK-8255448 Fastdebug JVM crashes with Vector API when PrintAssembly is turned on
-
- Resolved
-