8253623: Fastdebug JVM crashes with Vector API when PrintAssembly is turned on